# kindle-to-readwise

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  USAGE.md  WORKFLOW.md  example.html  kindle_to_readwise.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: test.yml
src/kindle_to_readwise/: __init__.py  __main__.py  converter.py
