[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kindle-to-readwise"
version = "1.0.0"
description = "Convert Kindle highlight exports to beautifully formatted Readwise imports"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sameer Bajaj", email = "your.email@example.com"},
]
keywords = [
    "kindle",
    "readwise",
    "highlights",
    "notes",
    "converter",
    "book-notes",
    "cli",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Utilities",
]
dependencies = [
    "pandas>=1.3.0",
    "beautifulsoup4>=4.9.3",
    "requests>=2.25.1",
    "lxml>=4.6.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/sameerbajaj/kindle-to-readwise"
Documentation = "https://github.com/sameerbajaj/kindle-to-readwise#readme"
Repository = "https://github.com/sameerbajaj/kindle-to-readwise"
Issues = "https://github.com/sameerbajaj/kindle-to-readwise/issues"
Changelog = "https://github.com/sameerbajaj/kindle-to-readwise/blob/main/CHANGELOG.md"

[project.scripts]
kindle-to-readwise = "kindle_to_readwise.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kindle_to_readwise"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.black]
line-length = 100
target-version = ["py37"]

[tool.ruff]
line-length = 100
target-version = "py37"
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
